pkg/kgateway/agentgatewaysyncer/testdata/outputs/trafficpolicy/rbac/http-rbac.yaml
Backends:
- key: default/example-backend
  name:
    name: example-backend
    namespace: default
  static:
    host: example.com
    port: 8080
Binds:
- key: 80/default/example-gateway
  port: 80
Listeners:
- bindKey: 80/default/example-gateway
  key: default/example-gateway.http
  name:
    gatewayName: example-gateway
    gatewayNamespace: default
    listenerName: http
  protocol: HTTP
Policies:
- key: traffic/default/cel-rbac-policy:rbac:default/example-route
  name:
    kind: AgentgatewayPolicy
    name: cel-rbac-policy
    namespace: default
  target:
    route:
      name: example-route
      namespace: default
  traffic:
    authorization:
      allow:
      - request.headers['x-my-header'] == 'cool-beans'
Routes:
- backends:
  - backend:
      backend: default/example-backend
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.0.0.http
  listenerKey: default/example-gateway.http
  name:
    kind: HTTPRoute
    name: example-route
    namespace: default
